Change list.of to arrays.aslist